// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`::ProductMapping ::_mapProduct converts variant image array to strings 1`] = `
Object {
  "hasStagedChanges": "false",
  "id": "12345ab-id",
  "key": "product-key",
  "state": "my-resolved-state",
  "variant": Object {
    "id": 1,
    "images": "https://example.com/foobar/commer.jpg;https://example-2.com/demo/tools.jpg|image-label",
    "sku": "A0E200000001YKI",
  },
}
`;

exports[`::ProductMapping ::_mapProduct handle conflicting productType names: conflictingPropertyNames 1`] = `
Object {
  "attribute.productType": "prodTypeattributeValue",
  "booleanAttribute": "true",
  "id": "12345ab-id",
  "key": "product-key",
  "normalAttribute": "normalAttrValue",
  "productType": "resolved-product-type",
  "variant.id": 1,
  "variant.images": "",
  "variant.sku": "A0E200000001YKI",
}
`;

exports[`::ProductMapping ::run should accept a product and map only masterVariants 1`] = `
Array [
  Object {
    "addedAttr": "",
    "anotherAddedAttr": "",
    "article": "sample 089 WHT",
    "categories": "res-cat-name-1;res-cat-name-2",
    "categoryOrderHints": "res-cat-name-1:0.015;res-cat-name-2:0.987",
    "color": "white",
    "color.de": "weiss",
    "color.en": "white",
    "color.fr": "",
    "color.it": "blanco",
    "colorFreeDefinition.de": "schwarz-weiß",
    "colorFreeDefinition.en": "black-white",
    "colorFreeDefinition.fr": "",
    "createdAt": "2017-01-06T10:54:51.395Z",
    "designer": "michaelkors",
    "emptySet": "",
    "hasStagedChanges": "false",
    "id": "12345ab-id",
    "key": "product-key",
    "lastModifiedAt": "2017-01-06T10:54:51.395Z",
    "lengthOfProduct": 0,
    "moneyAttr": "EUR 1234",
    "name.de": "Handyhülle",
    "name.en": "Phone cover",
    "name.fr": "",
    "prices": "DE-EUR 6400;IT-EUR 2900",
    "productType": "resolved-product-type",
    "published": "true",
    "reference": "referenceKey",
    "referenceById": "id123",
    "referenceByKey": "key123",
    "referenceSet": "referenceSetKey;referenceSetKey2",
    "setEnums": "myEnum;myEnum2",
    "setLText.de": "deText1;deText2",
    "setLText.en": "enText1;enText2",
    "setLText.fr": "",
    "setLenums": "myLenums;myLenums2;myLenums3",
    "setLenums.de": "myLenums-de;myLenums-de2;myLenums-de3",
    "setLenums.en": "myLenums-en;myLenums-en2;myLenums-en3",
    "setLenums.es": "myLenums-es;;myLenums-es3",
    "setLenums.fr": "",
    "setLenumsEmpty": "myLenums;myLenums2;myLenums3",
    "setLenumsEmpty.de": "myLenums-de;myLenums-de2;myLenums-de3",
    "setLenumsEmpty.en": "myLenums-en;myLenums-en2;myLenums-en3",
    "setLenumsEmpty.es": ";;myLenums-es3",
    "setLenumsEmpty.fr": "",
    "setOfLtextAttribute.en": "",
    "setOfLtextAttribute.fr": "",
    "setText": "text1;text2",
    "slug.de": "michaelkors-handyhuelle",
    "slug.en": "michaelkors-phonecover",
    "slug.fr": "",
    "taxCategory": "resolved-tax-name",
    "variant.availability": 10,
    "variant.id": 1,
    "variant.images": "https://example.com/foobar/commer.jpg;https://example-2.com/demo/tools.jpg|image-label",
    "variant.sku": "A0E200000001YKI",
  },
]
`;

exports[`::ProductMapping ::run should accept a product and return a formatted csv string 1`] = `
Array [
  Object {
    "addedAttr": "",
    "anotherAddedAttr": "",
    "article": "sample 089 WHT",
    "categories": "res-cat-name-1;res-cat-name-2",
    "categoryOrderHints": "res-cat-name-1:0.015;res-cat-name-2:0.987",
    "color": "white",
    "color.de": "weiss",
    "color.en": "white",
    "color.it": "blanco",
    "colorFreeDefinition.de": "schwarz-weiß",
    "colorFreeDefinition.en": "black-white",
    "createdAt": "2017-01-06T10:54:51.395Z",
    "designer": "michaelkors",
    "emptySet": "",
    "hasStagedChanges": "false",
    "id": "12345ab-id",
    "key": "product-key",
    "lastModifiedAt": "2017-01-06T10:54:51.395Z",
    "lengthOfProduct": 0,
    "moneyAttr": "EUR 1234",
    "name.de": "Handyhülle",
    "name.en": "Phone cover",
    "prices": "DE-EUR 6400;IT-EUR 2900",
    "productType": "resolved-product-type",
    "published": "true",
    "reference": "referenceKey",
    "referenceById": "id123",
    "referenceByKey": "key123",
    "referenceSet": "referenceSetKey;referenceSetKey2",
    "setEnums": "myEnum;myEnum2",
    "setLText.de": "deText1;deText2",
    "setLText.en": "enText1;enText2",
    "setLenums": "myLenums;myLenums2;myLenums3",
    "setLenums.de": "myLenums-de;myLenums-de2;myLenums-de3",
    "setLenums.en": "myLenums-en;myLenums-en2;myLenums-en3",
    "setLenums.es": "myLenums-es;;myLenums-es3",
    "setLenumsEmpty": "myLenums;myLenums2;myLenums3",
    "setLenumsEmpty.de": "myLenums-de;myLenums-de2;myLenums-de3",
    "setLenumsEmpty.en": "myLenums-en;myLenums-en2;myLenums-en3",
    "setLenumsEmpty.es": ";;myLenums-es3",
    "setOfLtextAttribute.en": "",
    "setText": "text1;text2",
    "slug.de": "michaelkors-handyhuelle",
    "slug.en": "michaelkors-phonecover",
    "taxCategory": "resolved-tax-name",
    "variant.availability": 10,
    "variant.id": 1,
    "variant.images": "https://example.com/foobar/commer.jpg;https://example-2.com/demo/tools.jpg|image-label",
    "variant.sku": "A0E200000001YKI",
  },
  Object {
    "article": "sample 089 WHT",
    "color": "white",
    "color.de": "weiss",
    "color.en": "white",
    "color.it": "blanco",
    "colorFreeDefinition.de": "schwarz-weiß",
    "colorFreeDefinition.en": "black-white",
    "designer": "michaelkors",
    "setLenums-2": "myLenums-2",
    "setLenums-2.de": "myLenums-2-de",
    "setLenums-2.en": "myLenums-2-en",
    "setLenums-2.es": "myLenums-2-es",
    "variant.id": 2,
    "variant.images": "https://example.com/foobar/commer234.jpg;https://example-2.com/demo/tools67.jpg",
    "variant.sku": "A0E200001YKI123",
  },
]
`;

exports[`::ProductMapping ::run should handle conflicting attribute names 1`] = `
Array [
  Object {
    "attribute.description.de": "description de",
    "attribute.description.en": "description en",
    "attribute.description.fr": "",
    "attribute.productType": "lenum-key-1",
    "attribute.productType.de": "label-de",
    "attribute.productType.en": "label-en",
    "attribute.productType.fr": "",
    "categories": "",
    "createdAt": "2018-11-13T09:43:13.304Z",
    "description.de": "",
    "description.en": "Conflict attribute test",
    "description.fr": "",
    "hasStagedChanges": "false",
    "id": "a8ca7cba-cfd7-404e-b52b-2150cfa103e3",
    "key": "conflict-attr-test",
    "lastModifiedAt": "2018-11-13T09:43:13.304Z",
    "name.de": "",
    "name.en": "conflictAttributeTest",
    "name.fr": "",
    "prices": "",
    "productType": "resolved-product-type",
    "published": "false",
    "slug.de": "",
    "slug.en": "conflict-attr-test",
    "slug.fr": "",
    "variant.id": 1,
    "variant.images": "",
    "variant.key": "KEY1",
    "variant.sku": "SKU1",
  },
]
`;
